# DPCstruct

./: CMakeLists.txt  README.md  run.sh
include/dpcfam/: concurrentqueue.h  datatypes.h  normalization.h
include/dpcstruct/: distance.h  primarycluster_core.h  primarycluster_proc.h  secondarycluster.h  sort.h
include/dpcstruct/fileparser/: AlnsFileParser.h  PCsFileParser.h
include/dpcstruct/secondarycluster/: classify_proc.h  distance_proc.h
include/dpcstruct/types/: Alignment.h  PrimaryCluster.h  ProducerConsumer.h
lib/commandparser/: CommandParser.h
lib/memorymapped/: MemoryMapped.cc  MemoryMapped.h
src/: postfilters.cc  prefilters.cc  primarycluster.cc  primarycluster_core.cc  primarycluster_proc.cc  secondarycluster.cc  traceback.cc
src/common/: distance.cc  sort.cc
src/fileparser/: AlnsFileParser.cc  PCsFileParser.cc
src/secondarycluster/: classify_module.cc  classify_proc.cc  distance_module.cc  distance_proc.cc  disti_bp.cc
tests/: CMakeLists.txt  test_delta.cc  test_density.cc  test_main.cc  test_parser.cc  test_peaks.cc
util/: download_plddts.sh  plddt_json_parser.cc  plddt_json_parser.x
